--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build"
   },
@@ -13,6 +13,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/darkholyphoenix/book-search.git"
+  },
+  "bugs": {
+    "url": "https://github.com/darkholyphoenix/book-search/issues"
+  },
+  "homepage": "https://github.com/darkholyphoenix/book-search#readme",
+  "dependencies": {
+    "nodemon": "^2.0.13"
   }
 }
+
+
