--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,14 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-client": "^2.6.10",
     "bootstrap": "^4.4.1",
     "graphql": "^15.6.1",
+    "graphql-tag": "^2.12.5",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
